--- a/style/style.scss
+++ b/style/style.scss
@@ -293,38 +293,38 @@
 	grid-auto-columns: minmax(100px, 200px);
 	animation: slide-left 15s linear infinite;
 
-	.image-gallery-item {
-		width: 100%;
-		aspect-ratio: 2 / 3;
-		overflow: hidden;
-		opacity: 0;
-		animation: fadeInColumn 15s ease-out infinite;
-
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			transition: transform 0.3s ease;
-			pointer-events: none;
-		}
-
-		&:hover img {
-			transform: scale(1.3);
-		}
-
-		&:nth-child(even) {
-			margin-top: -75%;
-		}
-
-		@for $i from 1 through 10 {
-			&:nth-child(#{$i}) {
-				animation-delay: #{($i - 1) * 0.1}s;
-			}
-		}
-	}
-
 	@media (min-width: 700px) {
 		grid-auto-columns: minmax(150px, 250px);
+	}
+}
+
+.image-gallery-item {
+	width: 100%;
+	aspect-ratio: 2 / 3;
+	overflow: hidden;
+	opacity: 0;
+	animation: fadeInColumn 15s ease-out infinite;
+
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		transition: transform 0.3s ease;
+		pointer-events: none;
+	}
+
+	&:hover img {
+		transform: scale(1.3);
+	}
+
+	&:nth-child(even) {
+		margin-top: -75%;
+	}
+
+	@for $i from 1 through 10 {
+		&:nth-child(#{$i}) {
+			animation-delay: #{($i - 1) * 0.1}s;
+		}
 	}
 }
 
@@ -423,13 +423,36 @@
 
 	.product-card {
 		width: 100%;
-		aspect-ratio: 4/3;
+		aspect-ratio: 3/4;
 		background-color: $secondary-color;
 		border-radius: $border-radius-general;
 		overflow: hidden;
 		text-decoration: none;
 		scroll-snap-align: start;
-		border: solid 1px $primary-color;
+		border: solid 2px $primary-color;
+		position: relative;
+		z-index: 0;
+
+		&::before {
+			content: url("../assets/wave.svg");
+			position: absolute;
+			bottom: 20%;
+			left: 0;
+			width: 100%;
+			z-index: 1;
+			transition: all 0.2s ease-out;
+		}
+		&::after {
+			content: "";
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 25%;
+			background-color: $primary-color;
+			z-index: 1;
+			transition: all 0.2s ease-out;
+		}
 
 		&:hover {
 			transform: scale(1.02);
@@ -437,7 +460,26 @@
 			.preview-card-img {
 				transform: scale(1.1);
 			}
+
+			&::before,
+			&::after {
+				transform: translateY(15%);
+			}
+
+			&::before {
+				transform: scale(2) translateX(-15%);
+			}
 		}
+	}
+
+	.card-info {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		z-index: 2;
+		padding: 1rem;
+		text-align: left;
+		font-size: 1.2rem;
 	}
 
 	@media screen and (min-width: 768px) {
@@ -446,7 +488,6 @@
 		}
 		.product-card {
 			max-width: 250px;
-			aspect-ratio: 3/4;
 		}
 	}
 }
