Fixed visual bugs

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -8,9 +8,9 @@
 
 .footer-content {
 	max-width: 1200px;
-	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
+	align-items: center;
 	justify-content: space-between;
 	gap: 20px;
 
@@ -47,6 +47,7 @@
 
 .copyright {
 	font-size: 0.85rem;
+	justify-self: center;
 }
 
 .footer-links {
