--- a/style/style.css
+++ b/style/style.css
@@ -475,9 +475,9 @@ section {
 
 .footer-content {
   max-width: 1200px;
-  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   justify-content: space-between;
   gap: 20px;
 }
@@ -515,6 +515,7 @@ section {
 
 .copyright {
   font-size: 0.85rem;
+  justify-self: center;
 }
 
 .footer-links {
@@ -616,7 +617,7 @@ section {
 .header-title {
   font-size: 18dvw;
   line-height: 0.8;
-  text-transform: uppercase;
+  text-transform: capitalize;
   margin-top: 5rem;
   font-family: "Alice";
 }
@@ -690,14 +691,15 @@ section {
 
 .why-us {
   background-color: #8e46ce;
-  max-width: none;
-  width: 100%;
   padding-block: 3rem;
-  padding-inline: 2rem;
+  width: 100%;
+  padding-inline: 0rem;
 }
-@media screen and (max-width: 700px) {
+@media screen and (min-width: 700px) {
   .why-us {
-    margin-bottom: 0px;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    max-width: none;
   }
 }
 
@@ -706,12 +708,12 @@ section {
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(1, 1fr);
-  gap: 30px;
-  max-width: 1200px;
 }
 @media screen and (min-width: 700px) {
   .why-us-container {
+    max-width: 1200px;
     grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
   }
 }
 
@@ -728,7 +730,6 @@ section {
   width: 100%;
   aspect-ratio: 4/3;
   text-align: left;
-  border-radius: 12px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 .reason:hover {
@@ -751,6 +752,7 @@ section {
 @media screen and (min-width: 700px) {
   .reason {
     max-width: 320px;
+    border-radius: 12px;
   }
 }
 
@@ -1021,6 +1023,7 @@ section {
   width: 100%;
   z-index: 1;
   transition: all 0.2s ease-out;
+  transform: scale(1.5) translateX(-5%);
 }
 .product-card-container .product-card::after {
   content: "";
