--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -47,7 +47,8 @@
 
 .copyright {
 	font-size: 0.85rem;
-	justify-self: center;
+	justify-self: center !important;
+	text-align: center !important;
 }
 
 .footer-links {
@@ -111,8 +112,8 @@
 	}
 }
 
-@media (max-width: 700px) {
-	.social-media {
-		justify-content: center;
+.social-media {
+	justify-content: center;
+	@media (max-width: 700px) {
 	}
 }
