--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -11,7 +11,7 @@
 }
 
 // Variables
-$primary-color: #8e46ce;
+$primary-color: #ff5d8f;
 $secondary-color: #fff0f4;
 $light-color: #fbf4f6;
 $dark-color: #19181f;
@@ -61,7 +61,7 @@ $border-radius-rounded: 100px;
 }
 hr {
 	width: 100%;
-	background-color: $light-color;
+	background-color: $primary-color;
 	height: 2px;
 }
 body {
