--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -78,8 +78,8 @@
 }
 
 .social-link {
-	width: 30px;
-	height: 30px;
+	width: 40px;
+	aspect-ratio: 1;
 	transition: transform 0.3s ease;
 
 	&:hover {
@@ -101,14 +101,20 @@
 	margin-top: 20px;
 	padding-top: 20px;
 	border-top: 1px solid rgba($light-color, 0.2);
-}
 
-.bold a {
-	color: $light-color;
-	text-decoration: none;
+	a {
+		display: flex;
+		flex-direction: column;
+		gap: 15px;
+		align-items: center;
 
-	&:hover {
-		color: $dark-color;
+		&:hover {
+			color: $dark-color;
+		}
+	}
+
+	.so-logo {
+		width: 50px;
 	}
 }
 
