--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@
   font-weight: 400;
 }
 .important-text {
-  color: #8e46ce;
+  color: #ff5d8f;
 }
 
 .bold {
@@ -57,7 +57,7 @@
 
 hr {
   width: 100%;
-  background-color: #fbf4f6;
+  background-color: #ff5d8f;
   height: 2px;
 }
 
@@ -79,8 +79,8 @@ a {
 .btn {
   padding: 0.5rem 1.6rem;
   border-radius: 100px;
-  background: #8e46ce;
-  border: 2px solid #8e46ce;
+  background: #ff5d8f;
+  border: 2px solid #ff5d8f;
   font-size: 1.1rem;
   cursor: pointer;
   width: 100%;
@@ -120,7 +120,7 @@ a {
 }
 .ghost-btn:hover {
   background: #fff0f4;
-  color: #8e46ce;
+  color: #ff5d8f;
 }
 
 section {
@@ -153,7 +153,7 @@ section {
   border-radius: 12px;
   background: #fff0f4;
   overflow: hidden;
-  border: solid 1px #8e46ce;
+  border: solid 1px #ff5d8f;
 }
 .card .card-content {
   padding: 1rem;
@@ -163,7 +163,7 @@ section {
 }
 .card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 4px 20px rgba(142, 70, 206, 0.8);
+  box-shadow: 0 4px 20px rgba(255, 93, 143, 0.8);
 }
 
 .two-columns {
@@ -308,7 +308,7 @@ section {
   width: 100%;
   font-weight: bold;
   background: #fff0f4;
-  border-bottom: 1px solid #8e46ce;
+  border-bottom: 1px solid #ff5d8f;
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.3);
 }
 @media screen and (min-width: 700px) {
@@ -323,7 +323,7 @@ section {
   align-items: center;
 }
 .nav-icon-wrapper:hover .nav-title {
-  color: #8e46ce;
+  color: #ff5d8f;
 }
 
 .nav-icon {
@@ -354,7 +354,7 @@ section {
     font-size: 0.9rem;
   }
   .nav-links p {
-    color: #8e46ce;
+    color: #ff5d8f;
     position: relative;
   }
   .nav-links p::after {
@@ -364,7 +364,7 @@ section {
     left: 50%;
     width: 0;
     height: 2px;
-    background-color: #8e46ce;
+    background-color: #ff5d8f;
     transition: width 0.3s ease;
     transform: translateX(-50%);
   }
@@ -394,7 +394,7 @@ section {
   height: 100vh;
   transform: translateX(-200%);
   padding: 1rem;
-  background-color: #8e46ce;
+  background-color: #fbf4f6;
   z-index: -1;
   gap: 50px;
   border-right: solid 1px #fff0f4;
@@ -416,7 +416,7 @@ section {
   display: flex;
   gap: 10px;
   align-items: center;
-  color: #fbf4f6;
+  color: #ff5d8f;
   font-size: 1.5rem;
 }
 
@@ -450,7 +450,7 @@ section {
 .toggle-btn .bar {
   height: 2px;
   width: 100%;
-  background-color: #8e46ce;
+  background-color: #ff5d8f;
   border-radius: 2px;
   transition: transform 0.4s ease, opacity 0.2s ease;
 }
@@ -466,7 +466,7 @@ section {
 
 .footer {
   margin-top: 2rem;
-  background: #8e46ce;
+  background: #ff5d8f;
   color: #fbf4f6;
   padding: 40px 20px;
   text-align: center;
@@ -541,8 +541,8 @@ section {
 }
 
 .social-link {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  aspect-ratio: 1;
   transition: transform 0.3s ease;
 }
 .social-link:hover {
@@ -563,13 +563,17 @@ section {
   padding-top: 20px;
   border-top: 1px solid rgba(251, 244, 246, 0.2);
 }
-
-.bold a {
-  color: #fbf4f6;
-  text-decoration: none;
+.footer-bottom a {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
 }
-.bold a:hover {
+.footer-bottom a:hover {
   color: #19181f;
+}
+.footer-bottom .so-logo {
+  width: 50px;
 }
 
 .social-media {
@@ -580,7 +584,7 @@ section {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top;
-  background-color: #8e46ce;
+  background-color: #ff5d8f;
   height: 100dvh;
 }
 @media screen and (min-width: 700px) {
@@ -645,7 +649,7 @@ section {
 }
 .cta-section .btn {
   background-color: #fff0f4;
-  color: #8e46ce;
+  color: #ff5d8f;
 }
 @media screen and (min-width: 700px) {
   .cta-section {
@@ -688,7 +692,7 @@ section {
 }
 
 .why-us {
-  background-color: #8e46ce;
+  background-color: #ff5d8f;
   padding-block: 3rem;
   width: 100%;
   padding-inline: 0rem;
@@ -794,7 +798,7 @@ section {
   flex-direction: column;
   justify-content: space-between;
   gap: 1rem;
-  background-color: #8e46ce;
+  background-color: #ff5d8f;
   color: #fbf4f6;
   position: relative;
 }
@@ -922,7 +926,7 @@ section {
 }
 .featutes .section-title,
 .featutes .section-subtitle {
-  color: #8e46ce;
+  color: #ff5d8f;
 }
 
 .features-container {
@@ -952,13 +956,13 @@ section {
   font-family: "Alice";
   font-size: 1.2rem;
   letter-spacing: 1px;
-  color: #8e46ce;
+  color: #ff5d8f;
   margin-bottom: 0.75rem;
 }
 
 .feature-text {
   font-size: 0.95rem;
-  color: #8e46ce;
+  color: #ff5d8f;
   line-height: 1.5;
 }
 
@@ -982,7 +986,7 @@ section {
 }
 .shop-preview .section-title,
 .shop-preview .section-subtitle {
-  color: #8e46ce;
+  color: #ff5d8f;
 }
 
 .shop-preview-container {
@@ -1012,7 +1016,7 @@ section {
   overflow: hidden;
   text-decoration: none;
   scroll-snap-align: start;
-  border: solid 2px #8e46ce;
+  border: solid 2px #ff5d8f;
   position: relative;
   z-index: 0;
 }
@@ -1033,7 +1037,7 @@ section {
   left: 0;
   width: 100%;
   height: 25%;
-  background-color: #8e46ce;
+  background-color: #ff5d8f;
   z-index: 1;
   transition: all 0.2s ease-out;
 }
