--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -4,6 +4,9 @@
 	color: $light-color;
 	padding: 40px 20px;
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .footer-content {
