--- a/style/style.css
+++ b/style/style.css
@@ -470,6 +470,9 @@ section {
   color: #fbf4f6;
   padding: 40px 20px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer-content {
