--- a/style/style.css
+++ b/style/style.css
@@ -145,6 +145,7 @@ section {
 
 .section-subtitle {
   color: #fbf4f6;
+  margin-top: 1rem;
   margin-bottom: 2rem;
   font-size: 1.2rem;
 }
@@ -511,7 +512,6 @@ section {
 
 .footer-logo {
   width: 150px;
-  margin-bottom: 15px;
 }
 
 .footer-description {
@@ -519,11 +519,14 @@ section {
   line-height: 1.5;
   margin-bottom: 15px;
 }
+@media screen and (min-width: 700px) {
+  .footer-description {
+    text-align: left;
+  }
+}
 
 .copyright {
   font-size: 0.85rem;
-  justify-self: center !important;
-  text-align: center !important;
 }
 
 .footer-links {
@@ -531,6 +534,12 @@ section {
 }
 .footer-links li {
   margin-bottom: 10px;
+  text-align: left;
+}
+@media screen and (min-width: 700px) {
+  .footer-links li {
+    transform: translateX(40%);
+  }
 }
 .footer-links a {
   color: #fbf4f6;
@@ -539,7 +548,7 @@ section {
   transition: color 0.3s ease;
 }
 .footer-links a:hover {
-  color: #19181f;
+  opacity: 0.7;
 }
 .footer-links a .social-media {
   display: flex;
@@ -562,7 +571,7 @@ section {
   line-height: 1.6;
 }
 .contact-info a:hover {
-  color: #19181f;
+  opacity: 0.7;
 }
 
 .footer-bottom {
@@ -578,15 +587,19 @@ section {
   align-items: center;
 }
 .footer-bottom a:hover {
-  color: #19181f;
+  opacity: 0.7;
 }
 .footer-bottom .so-logo {
   width: 50px;
+  margin-bottom: 15px;
 }
 
 .social-media {
+  display: flex;
   justify-content: center;
+  gap: 20px;
 }
+
 .header {
   background-image: url(../assets/header.jpg);
   background-repeat: no-repeat;
@@ -599,6 +612,7 @@ section {
   .header {
     background-position: center;
     background-size: cover;
+    height: 85dvh;
   }
 }
 
@@ -673,6 +687,7 @@ section {
   height: var(--height);
   overflow: hidden;
   mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
+  margin-block: 1.5rem;
 }
 
 .list {
@@ -688,7 +703,7 @@ section {
   position: absolute;
   left: 100%;
   animation: autoRun linear infinite;
-  animation-duration: 7s;
+  animation-duration: 15s;
   animation-delay: calc(15s / var(--quantity) * (var(--position) - 1)) !important;
 }
 .item h1 {
@@ -697,20 +712,26 @@ section {
   letter-spacing: 1px;
   text-wrap: nowrap;
   height: var(--height);
+  text-transform: uppercase;
 }
 
 .why-us {
-  background-color: #ff5d8f;
   padding-block: 3rem;
   width: 100%;
   padding-inline: 0rem;
 }
 .why-us .section-title {
-  margin-bottom: 2rem;
+  background-color: #ff5d8f;
+  padding-block: 2rem;
+}
+@media screen and (min-width: 700px) {
+  .why-us .section-title {
+    background-color: transparent;
+    color: #ff5d8f;
+  }
 }
 @media screen and (min-width: 700px) {
   .why-us {
-    padding: 2rem;
     margin-bottom: 2rem;
     max-width: none;
   }
@@ -726,7 +747,6 @@ section {
   .why-us-container {
     max-width: 1200px;
     grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
   }
 }
 
@@ -765,84 +785,6 @@ section {
 @media screen and (min-width: 700px) {
   .reason {
     max-width: 320px;
-    border-radius: 12px;
-  }
-}
-
-.about-us {
-  max-width: none;
-  width: 100%;
-  padding: 0;
-}
-@media screen and (min-width: 700px) {
-  .about-us {
-    padding: 1rem;
-    max-width: 1000px;
-  }
-}
-
-.about-us-container {
-  justify-items: center;
-}
-@media screen and (max-width: 700px) {
-  .about-us-container {
-    gap: 0;
-  }
-}
-
-.about-us-img {
-  width: 100%;
-}
-@media screen and (min-width: 700px) {
-  .about-us-img {
-    max-width: 350px;
-    border-radius: 12px;
-  }
-}
-
-.about-us-text {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 1rem;
-  background-color: #ff5d8f;
-  color: #fbf4f6;
-  position: relative;
-}
-.about-us-text .section-subtitle {
-  margin-top: unset;
-  margin-bottom: unset;
-}
-.about-us-text p {
-  text-align: justify;
-}
-.about-us-text .social {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-  position: relative;
-}
-.about-us-text .social img {
-  width: 100%;
-  max-width: 40px;
-}
-.about-us-text .social p {
-  font-size: 1.3rem;
-}
-@media screen and (min-width: 700px) {
-  .about-us-text {
-    text-align: justify;
-  }
-  .about-us-text .section-title {
-    font-size: 2.5rem;
-  }
-  .about-us-text p {
-    text-align: left;
-  }
-  .about-us-text .social {
-    justify-content: left;
   }
 }
 
@@ -1098,6 +1040,83 @@ section {
   width: 100%;
   height: 30%;
   z-index: 0;
+}
+
+.about-us {
+  max-width: none;
+  width: 100%;
+  padding: 0;
+}
+@media screen and (min-width: 700px) {
+  .about-us {
+    padding: 1rem;
+    max-width: 1000px;
+  }
+}
+
+.about-us-container {
+  justify-items: center;
+  gap: 0;
+}
+
+.about-us-img {
+  width: 100%;
+}
+.about-us-text {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
+  background-color: #ff5d8f;
+  color: #fbf4f6;
+}
+.about-us-text .section-subtitle {
+  margin-top: unset;
+  margin-bottom: unset;
+}
+.about-us-text p {
+  text-align: justify;
+}
+.about-us-text .social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.about-us-text .social img {
+  width: 100%;
+  max-width: 40px;
+}
+.about-us-text .social p {
+  font-size: 1.3rem;
+}
+@media screen and (min-width: 700px) {
+  .about-us-text {
+    text-align: justify;
+  }
+  .about-us-text .section-title {
+    font-size: 2.5rem;
+  }
+  .about-us-text p {
+    text-align: left;
+  }
+  .about-us-text .social {
+    justify-content: left;
+  }
+}
+
+.about-links {
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  align-self: center;
+}
+@media screen and (min-width: 700px) {
+  .about-links {
+    gap: 30px;
+    align-self: flex-start;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
