--- a/style/style.scss
+++ b/style/style.scss
@@ -27,6 +27,7 @@
 	@media screen and (min-width: 700px) {
 		background-position: center;
 		background-size: cover;
+		height: 85dvh;
 	}
 }
 .header-content {
@@ -94,6 +95,7 @@
 	height: var(--height);
 	overflow: hidden;
 	mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
+	margin-block: 1.5rem;
 }
 
 .list {
@@ -109,7 +111,7 @@
 	position: absolute;
 	left: 100%;
 	animation: autoRun linear infinite;
-	animation-duration: 7s;
+	animation-duration: 15s;
 	animation-delay: calc(
 		(15s / var(--quantity)) * (var(--position) - 1)
 	) !important;
@@ -120,22 +122,27 @@
 		letter-spacing: 1px;
 		text-wrap: nowrap;
 		height: var(--height);
+		text-transform: uppercase;
 	}
 }
 
 // why us
 .why-us {
-	background-color: $primary-color;
 	padding-block: 3rem;
 	width: 100%;
 	padding-inline: 0rem;
 
 	.section-title {
-		margin-bottom: 2rem;
+		background-color: $primary-color;
+		@media screen and (min-width: 700px) {
+			background-color: transparent;
+			color: $primary-color;
+		}
+
+		padding-block: 2rem;
 	}
 
 	@media screen and (min-width: 700px) {
-		padding: 2rem;
 		margin-bottom: 2rem;
 		max-width: none;
 	}
@@ -149,7 +156,6 @@
 	@media screen and (min-width: 700px) {
 		max-width: 1200px;
 		grid-template-columns: repeat(3, 1fr);
-		gap: 30px;
 	}
 }
 .reason {
@@ -189,81 +195,6 @@
 
 	@media screen and (min-width: 700px) {
 		max-width: 320px;
-		border-radius: $border-radius-general;
-	}
-}
-
-// about us
-.about-us {
-	max-width: none;
-	width: 100%;
-	padding: 0;
-
-	@media screen and (min-width: 700px) {
-		padding: 1rem;
-		max-width: 1000px;
-	}
-}
-.about-us-container {
-	justify-items: center;
-
-	@media screen and (max-width: 700px) {
-		gap: 0;
-	}
-}
-.about-us-img {
-	width: 100%;
-
-	@media screen and (min-width: 700px) {
-		max-width: 350px;
-		border-radius: $border-radius-general;
-	}
-}
-.about-us-text {
-	padding: 2rem;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	gap: 1rem;
-	background-color: $primary-color;
-	color: $light-color;
-	position: relative;
-
-	.section-subtitle {
-		margin-top: unset;
-		margin-bottom: unset;
-	}
-	p {
-		text-align: justify;
-	}
-	.social {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		gap: 5px;
-		position: relative;
-
-		img {
-			width: 100%;
-			max-width: 40px;
-		}
-		p {
-			font-size: 1.3rem;
-		}
-	}
-
-	@media screen and (min-width: 700px) {
-		text-align: justify;
-
-		.section-title {
-			font-size: 2.5rem;
-		}
-		p {
-			text-align: left;
-		}
-		.social {
-			justify-content: left;
-		}
 	}
 }
 
@@ -520,4 +451,84 @@
 	width: 100%;
 	height: 30%;
 	z-index: 0;
+}
+
+// about us
+.about-us {
+	max-width: none;
+	width: 100%;
+	padding: 0;
+
+	@media screen and (min-width: 700px) {
+		padding: 1rem;
+		max-width: 1000px;
+	}
+}
+.about-us-container {
+	justify-items: center;
+	gap: 0;
+}
+.about-us-img {
+	width: 100%;
+
+	@media screen and (min-width: 700px) {
+		// max-width: 350px;
+	}
+}
+.about-us-text {
+	padding: 2rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 2rem;
+	background-color: $primary-color;
+	color: $light-color;
+
+	.section-subtitle {
+		margin-top: unset;
+		margin-bottom: unset;
+	}
+	p {
+		text-align: justify;
+	}
+	.social {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 5px;
+
+		img {
+			width: 100%;
+			max-width: 40px;
+		}
+		p {
+			font-size: 1.3rem;
+		}
+	}
+
+	@media screen and (min-width: 700px) {
+		text-align: justify;
+
+		.section-title {
+			font-size: 2.5rem;
+		}
+		p {
+			text-align: left;
+		}
+		.social {
+			justify-content: left;
+		}
+	}
+}
+
+.about-links {
+	display: flex;
+	gap: 10px;
+	flex-direction: row;
+	align-self: center;
+
+	@media screen and (min-width: 700px) {
+		gap: 30px;
+		align-self: flex-start;
+	}
 }
