--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -13,7 +13,6 @@
 	max-width: 1200px;
 	display: flex;
 	flex-wrap: wrap;
-	align-items: center;
 	justify-content: space-between;
 	gap: 20px;
 
@@ -25,7 +24,8 @@
 
 .footer-column {
 	flex: 1;
-
+	display: flex;
+	flex-direction: column;
 	h3 {
 		font-size: 1.2rem;
 		margin-bottom: 15px;
@@ -39,6 +39,11 @@
 
 .footer-logo {
 	width: 150px;
+	align-self: center;
+
+	@media screen and (min-width: 700px) {
+		align-self: flex-start;
+	}
 }
 
 .footer-description {
@@ -87,7 +92,7 @@
 }
 
 .social-link {
-	width: 40px;
+	width: 30px;
 	aspect-ratio: 1;
 	transition: transform 0.3s ease;
 
