Changed cards images

--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -12,7 +12,7 @@
 
 // Variables
 $primary-color: #ff5d8f;
-$secondary-color: #fff0f4;
+$secondary-color: #f8f5f2;
 $light-color: #fbf4f6;
 $dark-color: #19181f;
 $synth-color: #006dff;
