--- a/style/style.scss
+++ b/style/style.scss
@@ -162,13 +162,13 @@
 }
 
 .elegance-card {
-	background: url("../assets/dresses/card_1.jpg");
+	background: url("../assets/dresses/why_1.jpg");
 }
 .quality-card {
-	background: url("../assets/dresses/card_2.jpg");
+	background: url("../assets/dresses/why_2.jpg");
 }
 .second-life-card {
-	background: url("../assets/dresses/card_3.jpg");
+	background: url("../assets/dresses/why_3.jpg");
 }
 
 .reason {
