--- a/style/style.css
+++ b/style/style.css
@@ -744,15 +744,15 @@ section {
 }
 
 .elegance-card {
-  background: url("../assets/dresses/card_1.jpg");
+  background: url("../assets/dresses/why_1.jpg");
 }
 
 .quality-card {
-  background: url("../assets/dresses/card_2.jpg");
+  background: url("../assets/dresses/why_2.jpg");
 }
 
 .second-life-card {
-  background: url("../assets/dresses/card_3.jpg");
+  background: url("../assets/dresses/why_3.jpg");
 }
 
 .reason {
