--- a/style/style.css
+++ b/style/style.css
@@ -297,6 +297,23 @@ section {
     opacity: 0;
   }
 }
+.floating {
+  transform: translateZ(0);
+  display: inline-block;
+  animation: floatY 4s ease-in-out infinite;
+}
+
+@keyframes floatY {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-8px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 .nav {
   position: sticky;
   top: 0;
@@ -510,7 +527,7 @@ section {
 .error-code {
   font-size: 40dvw;
   color: #ff5d8f;
-  text-shadow: 2px 2px 6px rgba(25, 24, 31, 0.5);
+  text-shadow: 2px 2px 6px rgba(25, 24, 31, 0.2);
   line-height: 0.7;
 }
 @media screen and (min-width: 768px) {
