--- a/style/_error.scss
+++ b/style/_error.scss
@@ -5,7 +5,13 @@
 	justify-content: center;
 	min-height: 100vh;
 	padding: 2rem;
-
+	background-image: url(../assets/error-image.png);
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-color: rgba(0, 0, 0, 0.8);
+	background-blend-mode: multiply;
+	color: $primary-color;
 	@media screen and (min-width: 768px) {
 		flex-direction: row;
 	}
@@ -13,10 +19,10 @@
 
 .error-image {
 	width: 100%;
-	max-width: 350px;
+	max-width: 250px;
 
 	@media screen and (min-width: 768px) {
-		max-width: 400px;
+		max-width: 350px;
 	}
 }
 
@@ -24,19 +30,20 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	text-align: center;
 	gap: 1rem;
 
 	@media screen and (min-width: 768px) {
-		text-align: left;
+		// text-align: left;
 		max-width: 400px;
 	}
 }
 
 .error-code {
-	font-size: 40dvw;
-	color: $primary-color;
-	text-shadow: 2px 2px 6px rgba($dark-color, 0.2);
+	font-family: "Alice";
+	font-size: 6rem;
+	text-shadow: 2px 2px 6px rgba($dark-color, 0.1);
 	line-height: 0.7;
 
 	@media screen and (min-width: 768px) {
