--- a/style/style.css
+++ b/style/style.css
@@ -493,6 +493,13 @@ section {
   justify-content: center;
   min-height: 100vh;
   padding: 2rem;
+  background-image: url(../assets/error-image.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-blend-mode: multiply;
+  color: #ff5d8f;
 }
 @media screen and (min-width: 768px) {
   .error-container {
@@ -502,11 +509,11 @@ section {
 
 .error-image {
   width: 100%;
-  max-width: 350px;
+  max-width: 250px;
 }
 @media screen and (min-width: 768px) {
   .error-image {
-    max-width: 400px;
+    max-width: 350px;
   }
 }
 
@@ -514,20 +521,20 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
   gap: 1rem;
 }
 @media screen and (min-width: 768px) {
   .error-info {
-    text-align: left;
     max-width: 400px;
   }
 }
 
 .error-code {
-  font-size: 40dvw;
-  color: #ff5d8f;
-  text-shadow: 2px 2px 6px rgba(25, 24, 31, 0.2);
+  font-family: "Alice";
+  font-size: 6rem;
+  text-shadow: 2px 2px 6px rgba(25, 24, 31, 0.1);
   line-height: 0.7;
 }
 @media screen and (min-width: 768px) {
