--- a/style/_error.scss
+++ b/style/_error.scss
@@ -5,24 +5,23 @@
 	justify-content: center;
 	min-height: 100vh;
 	padding: 2rem;
-	background-image: url(../assets/error-image.png);
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-color: rgba(0, 0, 0, 0.8);
-	background-blend-mode: multiply;
 	color: $primary-color;
+	position: relative;
+	overflow: hidden;
 	@media screen and (min-width: 768px) {
 		flex-direction: row;
 	}
 }
 
 .error-image {
-	width: 100%;
-	max-width: 250px;
+	position: absolute;
+	height: 100%;
+	z-index: -1;
+	filter: opacity(0.3);
 
 	@media screen and (min-width: 768px) {
-		max-width: 350px;
+		height: unset;
+		width: 100%;
 	}
 }
 
@@ -35,13 +34,12 @@
 	gap: 1rem;
 
 	@media screen and (min-width: 768px) {
-		// text-align: left;
 		max-width: 400px;
 	}
 }
 
 .error-code {
-	font-family: "Alice";
+	font-family: Ubuntu;
 	font-size: 6rem;
 	text-shadow: 2px 2px 6px rgba($dark-color, 0.1);
 	line-height: 0.7;
@@ -63,10 +61,13 @@
 .error-message {
 	font-size: 1.2rem;
 	max-width: 500px;
+	font-weight: bold;
 }
 
 .error-button {
 	@extend .btn;
-	max-width: 350px;
+	max-width: 250px;
 	padding: 0.75rem 2rem;
+	position: absolute;
+	bottom: 10%;
 }
