--- a/style/style.css
+++ b/style/style.css
@@ -542,10 +542,12 @@ section {
 }
 
 .error-button {
-  max-width: 250px;
+  width: 90%;
+  max-width: 350px;
   padding: 0.75rem 2rem;
   position: absolute;
   bottom: 10%;
+  text-wrap: nowrap;
 }
 
 .footer {
