--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -27,6 +27,16 @@ $border-radius-rounded: 100px;
 	font-weight: 400;
 }
 @font-face {
+	font-family: "Poppins";
+	src: url("../typography/Poppins-Bold.ttf") format("truetype");
+	font-weight: bold;
+}
+@font-face {
+	font-family: "Poppins";
+	src: url("../typography/Poppins-SemiBold.ttf") format("truetype");
+	font-weight: 600;
+}
+@font-face {
 	font-family: "Alice";
 	src: url("../typography/Alice-Regular.ttf") format("truetype");
 	font-weight: 400;
