--- a/style/_error.scss
+++ b/style/_error.scss
@@ -49,8 +49,8 @@
 }
 
 .error-title {
-	font-family: "Alice";
 	font-size: 3rem;
+	font-weight: 600;
 
 	@media screen and (min-width: 768px) {
 		font-size: 3.5rem;
@@ -58,9 +58,8 @@
 }
 
 .error-message {
-	font-size: 1rem;
+	font-size: 1.2rem;
 	max-width: 500px;
-	font-weight: bold;
 }
 
 .error-button {
@@ -68,7 +67,5 @@
 	width: 90%;
 	max-width: 350px;
 	padding: 0.75rem 2rem;
-	position: absolute;
-	bottom: 10%;
 	text-wrap: nowrap;
 }
