--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,16 @@
   font-weight: 400;
 }
 @font-face {
+  font-family: "Poppins";
+  src: url("../typography/Poppins-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("../typography/Poppins-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+}
+@font-face {
   font-family: "Alice";
   src: url("../typography/Alice-Regular.ttf") format("truetype");
   font-weight: 400;
@@ -525,8 +535,8 @@ section {
 }
 
 .error-title {
-  font-family: "Alice";
   font-size: 3rem;
+  font-weight: 600;
 }
 @media screen and (min-width: 768px) {
   .error-title {
@@ -535,17 +545,14 @@ section {
 }
 
 .error-message {
-  font-size: 1rem;
+  font-size: 1.2rem;
   max-width: 500px;
-  font-weight: bold;
 }
 
 .error-button {
   width: 90%;
   max-width: 350px;
   padding: 0.75rem 2rem;
-  position: absolute;
-  bottom: 10%;
   text-wrap: nowrap;
 }
 
