--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -50,7 +50,7 @@
 		transform: translateX(0);
 	}
 
-	#tops-tab:checked ~ & {
+	#otros-tab:checked ~ & {
 		&::before {
 			transform: translateX(100%);
 		}
@@ -74,7 +74,7 @@
 }
 
 #dresses-tab:checked ~ .tab-labels label[for="dresses-tab"],
-#tops-tab:checked ~ .tab-labels label[for="tops-tab"] {
+#otros-tab:checked ~ .tab-labels label[for="otros-tab"] {
 	color: $secondary-color;
 }
 
@@ -83,7 +83,7 @@
 }
 
 #dresses-tab:checked ~ .tab-contents .tab-content:nth-of-type(1),
-#tops-tab:checked ~ .tab-contents .tab-content:nth-of-type(2) {
+#otros-tab:checked ~ .tab-contents .tab-content:nth-of-type(2) {
 	display: block;
 }
 
@@ -113,16 +113,16 @@
 		transition: all 0.2s ease-out;
 	}
 
+	&:hover {
+		transform: scale(1.05);
+	}
+
 	.gallery-image {
 		border-radius: $border-radius-general;
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
 		display: block;
-	}
-
-	&:hover {
-		transform: scale(1.05);
 	}
 
 	.gallery-item-name {
